--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,72 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 @import "@fortawesome/fontawesome-free/scss/regular";
 @import "@fortawesome/fontawesome-free/scss/brands";
 
+// portfolio project
+@import "config";
+
+//components
+@import "components/menu";
+@import "components/banner";
+
 body {
+  background-color: $primary-color;
+  color: set-text-color($primary-color);
+  height: 100vh;
   font-family: "Open Sans", sans-serif;
+  font-size: 1.25rem;
+}
+
+h1 {
+  font-size: 4rem;
+}
+
+h2 {
+  font-size: 3rem;
+}
+
+h3 {
+  font-size: 2rem;
+}
+
+a {
+  color: set-text-color($primary-color);
+  text-decoration: none;
+}
+
+header {
+  position: fixed;
+  z-index: 2;
+  width: 100%;
+  padding: 1rem;
+}
+
+main {
+  height: 100%;
+  width: 100%;
+
+  .section-bottom {
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+
+    .social-icons {
+      a {
+        padding: 0.4em;
+        @include transition-ease;
+        &:hover {
+          color: $secondary-color;
+        }
+      }
+    }
+  }
+}
+
+footer {
+  font-size: 1rem;
+  position: fixed;
+  bottom: 0.4em;
+  right: 1rem;
+  text-align: right;
+  padding: 1rem;
+  color: set-text-color($primary-color);
 }
