--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -1,29 +1,51 @@
-.banner::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(to right, rgba($primary-color, 0.9), rgba($primary-color, 0.3));
-}
-
 .banner {
+  position: relative;
   height: 100%;
   height: 100vh;
-  align-items: center;
   background: url("../../media/banner.jpg") center;
   background-size: cover;
+  display: flex;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to right, rgba($primary-color, 0.9), rgba($primary-color, 0.3));
+  }
 
   &-content {
     position: relative;
-    text-align: center;
     margin: auto;
-    top: 50%;
+    text-align: center;
 
-    transform: translate(0, -50%);
     h1 {
       color: $secondary-color;
     }
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  h3 {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.5rem;
+  }
+}
+
+.banner-w-desc {
+  @extend .banner;
+
+  p {
+    padding: 0 2rem;
   }
 }
