--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,9 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 //components
 @import "components/menu";
 @import "components/banner";
+@import "components/about";
+@import "components/projects";
+@import "components/footer";
 
 body {
   background-color: $primary-color;
@@ -24,57 +27,16 @@ body {
   font-size: 1.25rem;
 }
 
-h1 {
-  font-size: 4rem;
-}
-
-h2 {
-  font-size: 3rem;
-}
-
-h3 {
-  font-size: 2rem;
-}
-
 a {
   color: set-text-color($primary-color);
   text-decoration: none;
 }
-
+.text-secondary {
+  color: $secondary-color;
+}
 header {
   position: fixed;
   z-index: 2;
   width: 100%;
   padding: 1rem;
-}
-
-main {
-  height: 100%;
-  width: 100%;
-
-  .section-bottom {
-    position: fixed;
-    bottom: 1rem;
-    left: 1rem;
-
-    .social-icons {
-      a {
-        padding: 0.4em;
-        @include transition-ease;
-        &:hover {
-          color: $secondary-color;
-        }
-      }
-    }
-  }
-}
-
-footer {
-  font-size: 1rem;
-  position: fixed;
-  bottom: 0.4em;
-  right: 1rem;
-  text-align: right;
-  padding: 1rem;
-  color: set-text-color($primary-color);
 }
