implement project page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,9 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 //components
 @import "components/menu";
 @import "components/banner";
+@import "components/badge";
+@import "components/section";
+//pages
 @import "components/about";
 @import "components/projects";
 @import "components/footer";
