--- a/src/styles/components/_banner.scss
+++ b/src/styles/components/_banner.scss
@@ -2,7 +2,7 @@
   position: relative;
   height: 100%;
   height: 100vh;
-  background: url("../../media/banner.jpg") center;
+  background: url("https://picsum.photos/id/827/1920/1080") center;
   background-size: cover;
   display: flex;
 
@@ -27,18 +27,18 @@
   }
 
   h1 {
-    font-size: 4rem;
+    font-size: 3rem;
   }
 
   h2 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
 
   h3 {
     font-size: 2rem;
   }
   p {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 }
 
